# zim-photo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: exif_reader.rs  find_good_test_day.rs  find_sample_files.rs  lr_explorer.rs  lr_explorer_simple.rs  main.rs  metadata_merger.rs  ollama_vision.rs  photo_walker.rs  sidecar_reader.rs  sidecar_writer.rs  test_lookup.rs  test_pipeline.rs  test_single_file.rs
