[package]
name = "zim-photo"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
kamadak-exif = "0.5"
glob = "0.3"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
